kustomizations/vane/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vane
spec:
  selector:
    app: vane
  type: ClusterIP
  ports:
    - name: http
      port: 3000
      targetPort: http
